<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iseeapp.isee.LandingActivity"
    android:weightSum="1">
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login"
        android:text="@string/loginOrRegister"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_account_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15px"
        android:layout_marginRight="15px"
        android:layout_marginTop="10px"
        android:textColor="#FFFFFF"
        app:backgroundTint="#009688"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/capture"
        android:text="@string/capture"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15px"
        android:layout_below="@+id/login"
        android:layout_marginRight="15px"
        android:drawableLeft="@drawable/ic_add_a_photo"
        android:textColor="#FFFFFF"
        app:backgroundTint="#009688"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/categories"
        android:text="@string/categories"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15px"
        android:layout_below="@+id/capture"
        android:layout_marginRight="15px"
        android:drawableLeft="@drawable/ic_dvr"
        android:textColor="#FFFFFF"
        app:backgroundTint="#009688"/>

    <View
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/categories"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/trendingTxt"
        android:text="@string/now_trending"
        android:layout_marginTop="20px"
        android:layout_marginBottom="5px"
        android:layout_below="@+id/seperator"
        android:layout_width="fill_parent"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginLeft="15px"
        android:layout_marginRight="15px"
        android:textSize="40px"
        android:padding="5px"
        android:layout_height="wrap_content"
        android:gravity="start"/>

    <View
        android:id="@+id/seperator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/trendingTxt"
        android:background="@android:color/darker_gray"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:background="#33000000"
        android:layout_height="match_parent"
        android:layout_below="@+id/seperator2"
        android:scrollbars="vertical" />


</RelativeLayout>
