<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:animateLayoutChanges="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_isee"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/loginLyt"
            android:visibility="visible">


            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="10dp"
                        android:padding="5dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/bg_search"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="#A9A9A9" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="5dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/action_sign_in"
                        android:background="@drawable/bg_search"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="#A9A9A9" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10px"
                        android:gravity="center"
                        android:text="@string/action_sign_in"
                        android:textColor="#009688"
                        app:backgroundTint="#ffffffff" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/recoverLyt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recoverText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:padding="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/recoverText"
                    android:textColor="#ffffffff" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/recover"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="5dp"
                        android:layout_marginBottom="10dp"
                        android:imeActionLabel="@string/action_sign_in"
                        android:background="@drawable/bg_search"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="#A9A9A9" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/recoverBtn"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10px"
                        android:padding="10dp"
                        android:gravity="center"
                        android:text="@string/recover_password"
                        android:textColor="#009688"
                        app:backgroundTint="#ffffffff" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:gravity="bottom|center_horizontal">

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:layout_gravity="start|bottom"
            android:padding="5dp"
            android:text="Sign up"
            android:textColor="#ffffffff" />

        <View
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_below="@+id/trendingTxt"
            android:background="@android:color/darker_gray"
            android:padding="5dp" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="5dp"
            android:text="Forgot Password?"
            android:textColor="#ffffffff" />
    </LinearLayout>
</LinearLayout>