<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_capture"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    tools:context="com.iseeapp.isee.CaptureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="#99000000"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/canweSaveit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:visibility="gone"
                    android:padding="5dp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/border"
                    android:layout_below="@+id/llyt"
                    android:onClick="showImageSaveDialog"
                    android:gravity="end"
                    android:text="Save PICTURE?"
                    android:textStyle="bold"
                    android:textSize="15dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/trendingTxt"
                    android:background="@android:color/darker_gray"
                    android:padding="5dp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/cancelPicture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/capturedImage"
                android:layout_marginTop="10px"
                android:text="@string/cancel"
                android:textColor="#ffffff"
                android:onClick="letsCancel"
                app:backgroundTint="#ff0000" />

            <android.support.v7.widget.AppCompatButton
            android:id="@+id/capturePictureCam"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10px"
            android:layout_below="@+id/cancelPicture"
            android:gravity="center"
            android:text="@string/captureFromCam"
            android:textColor="#009688"
            android:onClick="letsCapture"
            app:backgroundTint="#ffffffff" />
            />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/capturePictureFile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:layout_below="@+id/cancelPicture"
                android:gravity="center"
                android:text="@string/captureFromFile"
                android:textColor="#009688"
                android:onClick="letsCaptureFromFile"
                app:backgroundTint="#ffffffff" />
            />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/trendingTxt"
                android:background="@android:color/darker_gray"
                android:padding="5dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llyt"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/border"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:padding="15dp">
        <ImageView
            android:id="@+id/capturedImage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_image"
            />

    </LinearLayout>

</RelativeLayout>
