<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#009688"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_isee"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#ffffffff"
                    android:textSize="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginLyt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">


                <ProgressBar
                    android:id="@+id/login_progress"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/email_login_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <AutoCompleteTextView
                            android:id="@+id/nameOfUser"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            android:background="@drawable/bg_search"
                            android:layout_marginBottom="10dp"
                            android:hint="Name"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />

                        <AutoCompleteTextView
                            android:id="@+id/emailOfUser"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            android:background="@drawable/bg_search"
                            android:layout_marginBottom="10dp"
                            android:hint="Email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />

                        <EditText
                            android:id="@+id/passwordOfUser"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            android:background="@drawable/bg_search"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/prompt_password"
                            android:imeActionLabel="Password"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />

                        <AutoCompleteTextView
                            android:id="@+id/cellphone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            android:background="@drawable/bg_search"
                            android:layout_marginBottom="10dp"
                            android:hint="Cellphone"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />

                        <AutoCompleteTextView
                            android:id="@+id/alias"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            android:layout_marginBottom="10dp"
                            android:hint="Alias"
                            android:background="@drawable/bg_search"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />

                        <AutoCompleteTextView
                            android:id="@+id/bankOfUser"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            android:background="@drawable/bg_search"
                            android:layout_marginBottom="10dp"
                            android:hint="Bank"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />


                        <AutoCompleteTextView
                            android:id="@+id/accNumber"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:padding="5dp"
                            android:layout_marginBottom="10dp"
                            android:hint="Account Number"
                            android:background="@drawable/bg_search"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="#000000"
                            android:textColorHint="#000000" />

                        <CheckBox
                            android:id="@+id/checkbox_meat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="toggleAllowRegister"
                            android:padding="5dp"
                            android:text="@string/tac"
                            android:textColor="#ffffff" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/login"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10px"
                            android:gravity="center"
                            android:text="@string/register"
                            android:textColor="#009688"
                            android:onClick="registerUser"
                            app:backgroundTint="#ffffffff" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>